Add Links to RestDoc and back to developer portal